# tdd_fastapi

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-compose_dev.yml  healthchecking.sh  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  models.py
src/: Dockerfile  Dockerfile.dev  requirements.txt
src/app/: config.py  db.py  main.py  models.py
src/db/: Dockerfile  setup.sql
src/migrations/models/: 0_20220112223011_init.sql
src/requirements/: base.txt  development.txt
src/tests/: conftest.py  test_ping.py
tests/: conftest.py  test_ping.py
